fixed blank space to left on mobile added body,html

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,11 @@ html {
 body {
     max-width: 100vw;
     overflow-x: hidden;
+    position: relative;
+}
+
+body,html {
+    overflow-x:hidden;
 }
   
 nav {
